Updated to 0.6.2